--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.1"
 services:
 
   mysql5.7:
@@ -15,7 +14,7 @@ services:
 
   nginx:
     image: nginx:alpine
-    container_name: nginx_dev
+    container_name: nginx
     working_dir: /etc/nginx
     volumes:
       - ./app:/app
@@ -33,7 +32,7 @@ services:
 #    build:
 #      context: ./config/php7.3
 #      dockerfile: Dockerfile
-#    container_name: php_dev
+#    container_name: php
 #    working_dir: /app
 #    volumes:
 #      - ./app:/app
@@ -46,7 +45,7 @@ services:
     build:
       context: ./config/php7.4
       dockerfile: Dockerfile
-    container_name: php_dev
+    container_name: php
     working_dir: /app
     volumes:
       - ./app:/app
@@ -59,7 +58,7 @@ services:
 #    build:
 #      context: ./config/php8.0
 #      dockerfile: Dockerfile
-#    container_name: php_dev
+#    container_name: php
 #    working_dir: /app
 #    volumes:
 #      - ./app:/app
