--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,32 @@
 services:
 
-  mysql5.7:
-    image: mysql:5.7
-    container_name: mysql5.7_dev
+  postgres:
+    container_name: postgres
+    image: postgres:14.4
     environment:
-      MYSQL_ROOT_PASSWORD: root
+      POSTGRES_DB: "dev"
+      POSTGRES_USER: "root"
+      POSTGRES_PASSWORD: "root"
+      PGDATA: "/var/lib/postgresql/data/pgdata"
     volumes:
-      - ./app/db:/var/lib/mysql
-      - ./app/log/mysql:/var/log/mysql/
-      - ./config/mysql/conf.d:/etc/mysql/conf.d
+      - ./config/postgresql/conf.d:/docker-entrypoint-initdb.d
+      - ./app/db:/var/lib/postgresql/data
     ports:
-      - "3306:3306"
+      - "5432:5432"
+    networks:
+      - postgres
+
+  pgadmin:
+    container_name: pgadmin4
+    image: dpage/pgadmin4
+    restart: always
+    environment:
+      PGADMIN_DEFAULT_EMAIL: "root@root.com"
+      PGADMIN_DEFAULT_PASSWORD: "root"
+    ports:
+      - "5050:80"
+    networks:
+      - postgres
 
   nginx:
     image: nginx:alpine
@@ -66,3 +82,7 @@ services:
 #      - ./bin/sendmail:/usr/local/bin/sendmail
 #    environment:
 #        PHP_IDE_CONFIG: serverName=localhost
+
+networks:
+  postgres:
+    driver: bridge
