--- a/config/php/php-ini-overrides.ini
+++ b/config/php/php-ini-overrides.ini
@@ -6,6 +6,6 @@ xdebug.mode=debug
 xdebug.client_host=host.docker.internal
 xdebug.start_with_request=yes
 date.timezone = Europe/Moscow
-display_errors = off
+display_errors = on
 log_errors = On
 max_input_vars = 10000
